--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.1"
   }
 }
